--- a/template/.github/workflows/site.yml.jinja
+++ b/template/.github/workflows/site.yml.jinja
@@ -4,6 +4,8 @@ on:
   pull_request:
   push:
     branches: [main]
+  release:
+    types: [published]
 
 jobs:
   site-pr:
@@ -14,6 +16,7 @@ jobs:
     uses: athackst/ci/.github/workflows/mkdocs_site.yml@main
     with:
       pages: false
+      version: [[ site_version ]]
 [% else %]
     uses: athackst/ci/.github/workflows/jekyll_site.yml@main
     with:
@@ -31,9 +34,25 @@ jobs:
     uses: athackst/ci/.github/workflows/mkdocs_site.yml@main
     with:
       pages: true
+      version: [[ site_version ]]
 [% else %]
     uses: athackst/ci/.github/workflows/jekyll_site.yml@main
     with:
       pages: true
 [% endif %]
     secrets: inherit
+
+[% if site_generator == "mkdocs" %]
+  site-release:
+    if: ${{ github.event_name == 'release' && github.event.action == 'published' }}
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    uses: athackst/ci/.github/workflows/mkdocs_site.yml@main
+    with:
+      pages: true
+      version: [[ site_version ]]
+      release-tag: ${{ github.event.release.tag_name }}
+    secrets: inherit
+[% endif %]
