--- a/template/.github/workflows/pr_bot.yml.jinja
+++ b/template/.github/workflows/pr_bot.yml.jinja
@@ -25,4 +25,5 @@ jobs:
     with:
       bump-script: [[ bump_script_path ]]
 [% endif %]
-    secrets: inherit
+    secrets:
+      token: ${{ secrets.CI_BOT_TOKEN }}
