Add workflow summary step to PR bump

--- a/template/.github/workflows/pr_bot.yml.jinja
+++ b/template/.github/workflows/pr_bot.yml.jinja
@@ -24,7 +24,7 @@ jobs:
     secrets: inherit
 
   pr-bump:
-    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository }}
+    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository && github.event.pull_request.user.login != 'dependabot[bot]' }}
     needs: label-prs
     permissions:
       contents: write
