Add CI Update Dispatch workflow and modify CI update trigger to repository_dispatch

--- a/template/.github/workflows/ci_update.yml.jinja
+++ b/template/.github/workflows/ci_update.yml.jinja
@@ -1,8 +1,9 @@
 name: CI update
 
 on:
-  schedule:
-    - cron: "17 3 * * *"
+  repository_dispatch:
+    types:
+      - ci-update
   workflow_dispatch:
 
 jobs:
