Add Copier Update workflow to automate template application and commit changes

--- a/template/.github/workflows/site.yml.jinja
+++ b/template/.github/workflows/site.yml.jinja
@@ -7,6 +7,10 @@ on:
   release:
     types: [published]
 
+concurrency:
+  group: "site-${{ github.event.pull_request.number || github.ref }}"
+  cancel-in-progress: false
+
 jobs:
   site-pr:
     if: ${{ github.event_name == 'pull_request' }}
