--- a/template/.github/workflows/ci_update.yml.jinja
+++ b/template/.github/workflows/ci_update.yml.jinja
@@ -1,4 +1,4 @@
-name: CI update
+name: CI Update
 
 on:
   repository_dispatch:
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 concurrency:
-  group: "ci-update-${{ github.event.pull_request.number || github.ref }}"
+  group: "ci-update-${{ github.ref }}"
   cancel-in-progress: false
 
 
