--- a/template/.github/workflows/pr_bot.yml.jinja
+++ b/template/.github/workflows/pr_bot.yml.jinja
@@ -21,8 +21,8 @@ jobs:
     uses: athackst/ci/.github/workflows/automerge.yml@main
     secrets:
       token: ${{ secrets.CI_BOT_TOKEN }}
+[%- if bump_script_path %]
 
-[% if bump_script_path %]
   pr-bump:
     if: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == github.repository && github.event.pull_request.user.login != 'dependabot[bot]' }}
     needs: pr-label
@@ -34,4 +34,4 @@ jobs:
       bump-script: [[ bump_script_path ]]
     secrets:
       token: ${{ secrets.CI_BOT_TOKEN }}
-[% endif %]
+[%- endif %]
